Fix spacing on index

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -4,7 +4,7 @@
  */
 
 body {
-    background-color:#333333;
+    background-color:#222222;
 	
     height:100%;
 	width:100%;
